[package]
name = "doorman"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = { version = "0.4.31", features = ["serde"] }
chrono-humanize = "0.2.3"
clap = { version = "4.4.4", features = ["derive"] }
comfy-table = "7.0.1"
directories = "5.0.1"
fs4 = "0.6.6"
handlebars = "4.4.0"
nix = { version = "0.27.1", features = ["user"] }
rust-embed = { version = "8.0.0", features = ["interpolate-folder-path"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serde_yaml = "0.9.25"
which = "4.4.2"
yore = "1.1.0"
